refactor: fix code review suggestions regarding structure, nullability annotations and general improvements